--- a/estilo.css
+++ b/estilo.css
@@ -46,15 +46,18 @@ table {
 }
 
 #pantalla {
+    overflow: hidden;
     border: 2px solid black;
     margin-bottom: 5px;
     height: 70px;
     background-color: cadetblue;
     color: red;
     text-align: right;
-    font-size: 50px;
+    font-size: 40px;
     box-shadow: 2px 2px 5px black;
     border-radius: 15px;
+    overflow: hidden;
+    
 }
 
 tr {
