--- a/estilo.css
+++ b/estilo.css
@@ -3,12 +3,13 @@
     src: url('Brightly Crush Shine.otf');
 }
 
-*{
+/* *{
     
     box-sizing: border-box;
-}
+} */
 
 body {
+    margin-top: 120px;
     background-color: #cba8ff;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23000000' fill-opacity='0.27' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
@@ -23,19 +24,22 @@ h1 {
     text-shadow: 2px 2px 3px black;
 }
 
-.lista_menu li, .lista_menu_princi p{
-    display: inline;
-    margin: 0 80px;    
-}
 
-.lista_menu_princi, .lista_menu_princi a{
+li a {
+
     font: bold 20px "MiPropiaFuente";
     /* Separo un poco las letras entre si*/
     letter-spacing: 0.1em;  
+    margin-left: 50px;
+    
     text-align: center;
-    width: 320px;
     color: black;
     text-decoration-line: none;
+    list-style-type: none;
+}
+
+.dropdown-menu a {
+    margin-left: 0;
 }
 
 table {
@@ -53,7 +57,7 @@ table {
     background-color: cadetblue;
     color: red;
     text-align: right;
-    font-size: 40px;
+    font-size: 1.55rem;
     box-shadow: 2px 2px 5px black;
     border-radius: 15px;
     overflow: hidden;
@@ -65,23 +69,87 @@ tr {
     font-size: 50px;
 }
 
-td, th{
+td{
     width: 100px;
     border: 1px solid black;
 }
+
 
 td:active,th:active{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5) inset;
 }
 
 .operaciones {
-    background-color: rgb(128, 250, 0);
+    background-color: rgb(160, 156, 156);
 }
 
 .numeros {
     border-color: red;
+    background-color: rgb(211, 211, 211);
 }
 
 .igual {
     background-color: rgb(139, 190, 232);
 }
+.transparencia {
+    background-color: transparent !important;   
+}
+
+
+
+@media 	all	and	(max-width:	768px) {
+    .overflow {
+        overflow: hidden;
+    }
+    #pantalla {
+        overflow: hidden;
+        border: 2px solid black;
+        margin-bottom: 5px;
+        height: 70px;
+        background-color: cadetblue;
+        color: red;
+        text-align: right;
+        font-size: 1.8em;
+        box-shadow: 2px 2px 5px black;
+        border-radius: 15px;
+        overflow: hidden;
+        
+    }
+    
+    tr {
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    td, th{
+        width: 50px;
+        border: 1px solid black;
+    }
+}
+
+@media 	all	and	(max-width:	576px) {
+    #pantalla {
+        overflow: hidden;
+        border: 2px solid black;
+        margin-bottom: 5px;
+        height: 45px;
+        background-color: cadetblue;
+        color: red;
+        text-align: right;
+        font-size: 1.2em;
+        box-shadow: 2px 2px 5px black;
+        border-radius: 5px;
+        overflow: hidden;
+        
+    }
+    
+    tr {
+        text-align: center;
+        font-size: 30px;
+    }
+    
+    td{
+        width: 13px;
+        border: 1px solid black;
+    }
+} 
